# lawn_tractor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml  simulator.md
docker/: Dockerfile  build.sh  push.sh  start.sh
lawn_tractor/: CMakeLists.txt  README.md  package.xml
lawn_tractor_navigation/: CMakeLists.txt  gps_points_file.txt  package.xml
lawn_tractor_navigation/cfg/: local_costmap_params.yaml  teb_local_planner_params_carlike.yaml  tractor_sim.cfg
lawn_tractor_navigation/config/: controllers.yaml  costmap_common_params.yaml  global_costmap_params.yaml  planners.yaml  recovery_behaviors.yaml
lawn_tractor_navigation/config/behavior_tree/: movebaseflex_tree.xml
lawn_tractor_navigation/include/: mbf_behaviorTree.h  movebaseflex_bt_node.h
lawn_tractor_navigation/launch/: send_goals.launch
lawn_tractor_navigation/scripts/: collect_gps_points.py
lawn_tractor_navigation/src/: follow_gps_waypoints.cpp  mbf_behaviorTree.cpp  mbf_state_machine.py  movebaseflex_bt_node.cpp
lawn_tractor_sim/: CMakeLists.txt  README.md  package.xml
lawn_tractor_sim/launch/: lawn_tractor_sim.launch
lawn_tractor_sim/maps/: farm.yaml
lawn_tractor_sim/meshes/: kubo_back_tire.dae  kubo_front_tire.dae  lawn_tractor.fcstd  lawn_tractor.stl
lawn_tractor_sim/rviz/: tractor_viz.rviz
lawn_tractor_sim/scripts/: fake_gps.py  odom_to_lla.py
lawn_tractor_sim/src/: shapes.cpp
lawn_tractor_sim/stage/: farm.world  objects.inc  tractor.inc
lawn_tractor_sim/urdf/: lawn_tractor.urdf.xacro
scripts/: collect_gps_points.py
