<?xml version="1.0"?>
<package format="2">
  <name>lawn_tractor_navigation</name>
  <version>0.0.0</version>
  <description>The lawn_tractor_navigation package</description>

  <maintainer email="matt@rosagriculture.org">Matt Droter</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>mbf_costmap_core</build_depend>
  <build_depend>mbf_msgs</build_depend>
  <build_depend>geonav_transform</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>mbf_msgs</build_depend>
  <build_depend>mbf_costmap_nav</build_depend>
  <build_depend>map_server</build_depend>
  <exec_depend>geonav_transform</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>mbf_costmap_core</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>move_base_flex</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>map_server</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
